--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "antd": "^5.25.4",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
