--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.3.0",
+    "@tinymce/tinymce-react": "^6.2.1",
     "antd": "^5.25.4",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
