--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,19 @@
-PORT=3000
-MONGO_URL=your_mongodb_connection_string
-# MONGO_URL=mongodb://localhost:27017/project-library
-JWT_SECRET=your_jwt_secret
-CHATBOT_API_KEY=your_chatbot_api_key
+# Backend Environment Variables
+
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/stratos_db
+# For MongoDB Atlas (cloud database)
+# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database_name
+
+# Authentication
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Google AI/Chatbot (rename from CHATBOT_API_KEY to GOOGLE_API_KEY)
+GOOGLE_API_KEY=your-google-api-key-here
+
+# Optional: For production deployment
+# CORS_ORIGIN=http://localhost:3000,http://your-frontend-domain.com
