--- a/ docker-compose.dev.yml
+++ b/ docker-compose.dev.yml
@@ -13,10 +13,10 @@ services:
 
   backend:
     build:
-      context: ./backend
+      context: ./server
       dockerfile: Dockerfile
     volumes:
-      - ./backend:/app
+      - ./server:/app
       - /app/node_modules
     command: npm start   
     environment:
