--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,47 +4,47 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  test-and-build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: |
-            client/package-lock.json
-            server/package-lock.json
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Install dependencies - Client
+      - name: Build & Push backend
         run: |
-          cd client
-          npm ci
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ./server
+          docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
 
-      - name: Install dependencies - Server
+      - name: Build & Push frontend
         run: |
-          cd server
-          npm ci
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ./client
+          docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
 
-      - name: Build Client
-        run: |
-          cd client
-          npm run build
-
-      - name: Run Client Tests (if any)
-        run: |
-          cd client
-          npm run lint
-
-      - name: Build Docker Images (optional)
-        run: |
-          docker build -t mern-frontend ./client
-          docker build -t mern-backend ./server
+      - name: Deploy to server via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: ${{ secrets.SERVER_SSH_PORT || '22' }}
+          script: |
+            cd ~/app
+            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+            docker-compose pull
+            docker-compose up -d --remove-orphans
+            docker image prune -f
