--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,3 +1,53 @@
+# name: MERN CI/CD
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v3
+
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+
+#       - name: Build & Push backend
+#         run: |
+#           docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ./server
+#           docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }}
+#           docker tag ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
+#           docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
+
+#       - name: Build & Push frontend
+#         run: |
+#           docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ./client
+#           docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }}
+#           docker tag ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
+#           docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
+
+#       - name: Deploy to server via SSH
+#         uses: appleboy/ssh-action@v1.0.3
+#         with:
+#           host: ${{ secrets.SERVER_HOST }}
+#           username: ${{ secrets.SERVER_USER }}
+#           key: ${{ secrets.SERVER_SSH_KEY }}
+#           port: ${{ secrets.SERVER_SSH_PORT || '22' }}
+#           script: |
+#             cd ~/app
+#             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+#             docker-compose pull
+#             docker-compose up -d --remove-orphans
+#             docker image prune -f
 name: MERN CI/CD
 
 on:
@@ -6,7 +56,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -21,30 +71,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & Push backend
+      - name: Build & Push backend image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ./server
           docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }}
           docker tag ${{ secrets.DOCKER_USERNAME }}/mern-backend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/mern-backend:latest
 
-      - name: Build & Push frontend
+      - name: Build & Push frontend image
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ./client
           docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }}
           docker tag ${{ secrets.DOCKER_USERNAME }}/mern-frontend:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/mern-frontend:latest
-
-      - name: Deploy to server via SSH
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: ${{ secrets.SERVER_SSH_PORT || '22' }}
-          script: |
-            cd ~/app
-            echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-            docker-compose pull
-            docker-compose up -d --remove-orphans
-            docker image prune -f
